@@ -1,6 +1,7 @@
 package controller;
 
 import dao.SizeDAO;
+import dto.UserLoginDTO;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
@@ -22,10 +23,20 @@ public class CartServlet extends HttpServlet {
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        
+
         String action = request.getParameter("action");
         if ("checkout-form".equals(action)) {
+            HttpSession session = request.getSession();
+            if (session.getAttribute("currentUser") == null) {
+                session.setAttribute("loginError", "Vui lòng đăng nhập để tiến hành thanh toán.");
+                response.sendRedirect(request.getContextPath() + "/login");
+                return;
+            }
             handleCheckoutForm(request, response);
+            return;
+        }
+        if ("applyDiscount".equals(action)) {
+            handleApplyDiscount(request, response);
             return;
         }
         if (action != null) {
@@ -33,7 +44,6 @@ public class CartServlet extends HttpServlet {
             return;
         }
 
-        
         HttpSession session = request.getSession();
         @SuppressWarnings("unchecked")
         Map<String, CartItem> cart = (Map<String, CartItem>) session.getAttribute("cart");
@@ -42,16 +52,12 @@ public class CartServlet extends HttpServlet {
             session.setAttribute("cart", cart);
         }
 
-        
         int totalAmount = 0;
         int totalQty = 0;
         for (CartItem item : cart.values()) {
             totalAmount += item.getSubtotal();
             totalQty += item.getQuantity();
         }
-
-        // ── Tính stock hiện tại theo từng productId-size ──
-
         try {
             StockService stockSvc = new StockService();
             HashMap<Product, HashMap<String, Integer>> rawStock = stockSvc.calculateProduct();
@@ -61,7 +67,6 @@ public class CartServlet extends HttpServlet {
             }
             request.setAttribute("stockMap", stockMap);
         } catch (Exception ignored) {
-           
         }
 
         request.setAttribute("cartItems", cart.values());
@@ -74,9 +79,15 @@ public class CartServlet extends HttpServlet {
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        
+
         String action = request.getParameter("action");
         if ("checkout".equals(action)) {
+            HttpSession session = request.getSession();
+            if (session.getAttribute("currentUser") == null) {
+                session.setAttribute("loginError", "Vui lòng đăng nhập để tiến hành thanh toán.");
+                response.sendRedirect(request.getContextPath() + "/login");
+                return;
+            }
             handleCheckout(request, response);
             return;
         }
@@ -98,28 +109,28 @@ public class CartServlet extends HttpServlet {
         String cartKey = request.getParameter("productId");
 
         switch (action) {
-            case "add" -> {
-                String productId  = cartKey; // lúc add, cartKey chứa productId thuần
+            case "add": {
+                String productId = cartKey; // lúc add, cartKey chứa productId thuần
                 String productName = request.getParameter("productName");
-                String priceStr   = request.getParameter("price");
-                String sizeIdStr  = request.getParameter("sizeId");
+                String priceStr = request.getParameter("price");
+                String sizeIdStr = request.getParameter("sizeId");
                 int price = 0;
                 try {
                     price = new java.math.BigDecimal(priceStr.trim()).intValue();
-                } catch (Exception ignored) {}
+                } catch (Exception ignored) {
+                }
 
-                
                 String sizeName = "";
-                if (sizeIdStr != null && !sizeIdStr.isBlank()) {
+                if (sizeIdStr != null && !sizeIdStr.trim().isEmpty()) {
                     try {
                         int sizeId = Integer.parseInt(sizeIdStr.trim());
                         SizeDAO sizeDAO = new SizeDAO();
                         HashMap<Integer, String> sizeMap = sizeDAO.getSize();
                         sizeName = sizeMap.getOrDefault(sizeId, "");
-                    } catch (Exception ignored) {}
+                    } catch (Exception ignored) {
+                    }
                 }
 
-               
                 int stock = 0;
                 if (!sizeName.isEmpty()) {
                     try {
@@ -132,11 +143,13 @@ public class CartServlet extends HttpServlet {
                                 break;
                             }
                         }
-                    } catch (Exception ignored) {}
+                    } catch (Exception e) {
+                        throw new RuntimeException(e);
+                    }
                 }
 
-                // Key = "productId_sizeName" để tách riêng cùng SP khác size
-                String key = productId + "_" + sizeName;
+                // Composite key: "productId_sizeName" để phân biệt cùng sản phẩm khác size
+                String key = sizeName.isEmpty() ? productId : productId + "_" + sizeName;
                 CartItem existing = cart.get(key);
                 if (existing == null) {
                     if (stock > 0) {
@@ -145,6 +158,7 @@ public class CartServlet extends HttpServlet {
                         cart.put(key, newItem);
                     }
                 } else {
+                    // Cùng sản phẩm + cùng size → chỉ tăng số lượng
                     if (existing.getStock() <= 0 || existing.getQuantity() < existing.getStock()) {
                         existing.setQuantity(existing.getQuantity() + 1);
                     }
@@ -156,7 +170,6 @@ public class CartServlet extends HttpServlet {
                     return;
                 }
 
-                
                 String referer = request.getHeader("referer");
                 if (referer != null && !referer.isEmpty()) {
                     String sep = referer.contains("?") ? "&" : "?";
@@ -166,24 +179,23 @@ public class CartServlet extends HttpServlet {
                 }
                 return;
             }
-            case "update" -> {
+            case "update": {
                 String deltaStr = request.getParameter("delta");
                 int delta = 1;
                 try {
                     delta = Integer.parseInt(deltaStr);
-                } catch (NumberFormatException ignored) {}
-
+                } catch (NumberFormatException ignored) {
+                }
                 cartService.updateQuantity(cart, cartKey, delta);
+                break;
             }
-            case "remove" -> {
+            case "remove":
                 cartService.removeItem(cart, cartKey);
-            }
-            case "clear" -> {
+                break;
+            case "clear":
                 cartService.clearCart(cart);
-            }
+                break;
         }
-
-        
         String referer = request.getHeader("referer");
         if (referer != null && referer.contains("/Cart")) {
             response.sendRedirect(request.getContextPath() + "/Cart");
@@ -204,31 +216,32 @@ public class CartServlet extends HttpServlet {
         }
 
         long totalAmount = 0;
-        int  totalQty    = 0;
+        int totalQty = 0;
         for (CartItem item : cart.values()) {
             totalAmount += item.getSubtotal();
-            totalQty    += item.getQuantity();
+            totalQty += item.getQuantity();
         }
 
         // Tính giảm giá nếu có mã
-        String discountCode  = request.getParameter("discountCode");
-        long   discountAmount = 0;
-        if (discountCode != null && !discountCode.isBlank()) {
+        String discountCode = request.getParameter("discountCode");
+        long discountAmount = 0;
+        if (discountCode != null && !discountCode.trim().isEmpty()) {
             try {
                 java.math.BigDecimal total = new java.math.BigDecimal(totalAmount);
                 services.PromotionService ps = new services.PromotionService();
                 discountAmount = ps.calculateDiscount(discountCode.trim(), total).longValue();
-            } catch (Exception ignored) {}
+            } catch (Exception ignored) {
+            }
         }
         long finalAmount = Math.max(totalAmount - discountAmount, 0);
 
-        request.setAttribute("totalAmount",    totalAmount);
+        request.setAttribute("totalAmount", totalAmount);
         request.setAttribute("discountAmount", discountAmount);
-        request.setAttribute("finalAmount",    finalAmount);
-        request.setAttribute("totalQty",       totalQty);
-        request.setAttribute("discountCode",   discountCode != null ? discountCode : "");
-        request.setAttribute("orderNote",      request.getParameter("orderNote") != null ? request.getParameter("orderNote") : "");
-        request.setAttribute("cartItems",      cart.values());
+        request.setAttribute("finalAmount", finalAmount);
+        request.setAttribute("totalQty", totalQty);
+        request.setAttribute("discountCode", discountCode != null ? discountCode : "");
+        request.setAttribute("orderNote", request.getParameter("orderNote") != null ? request.getParameter("orderNote") : "");
+        request.setAttribute("cartItems", cart.values());
         request.getRequestDispatcher("views/Order/Checkout.jsp").forward(request, response);
     }
 
@@ -243,11 +256,11 @@ public class CartServlet extends HttpServlet {
             return;
         }
 
-      
         String customerIdStr = null;
         Object currentUser = session.getAttribute("currentUser");
-        if (currentUser instanceof dto.UserLoginDTO) {
-            int accountId = ((dto.UserLoginDTO) currentUser).getAccountId();
+        if (currentUser instanceof UserLoginDTO) {
+            UserLoginDTO user = (UserLoginDTO) currentUser;
+            int accountId = user.getAccountId();
             dao.OrderDAO orderDAO = new dao.OrderDAO();
             int customerId = orderDAO.getCustomerIdByAccountId(accountId);
             if (customerId > 0) {
@@ -255,17 +268,89 @@ public class CartServlet extends HttpServlet {
             }
         }
 
-        String orderNote       = request.getParameter("orderNote");    // ghi chú từ Cart.jsp → Orders.Note
-        String deliveryNote    = request.getParameter("deliveryNote"); // ghi chú từ Checkout.jsp → OrderAddresses.Note
-        String discountCode    = request.getParameter("discountCode");
+        String orderNote = request.getParameter("orderNote");    // ghi chú từ Cart.jsp → Orders.Note
+        String deliveryNote = request.getParameter("deliveryNote"); // ghi chú từ Checkout.jsp → OrderAddresses.Note
+        String discountCode = request.getParameter("discountCode");
         String deliveryAddress = request.getParameter("deliveryAddress");
-        String paymentMethod   = request.getParameter("paymentMethod");
-        String orderCode       = cartService.checkout(cart, orderNote, customerIdStr, discountCode, deliveryAddress, paymentMethod, deliveryNote);
+        String paymentMethod = request.getParameter("paymentMethod");
+//        String orderCode = cartService.checkout(cart, orderNote, customerIdStr, discountCode, deliveryAddress, paymentMethod, deliveryNote);
 
-        if (orderCode != null) {
-            response.sendRedirect(request.getContextPath() + "/Cart?checkoutSuccess=1&code=" + orderCode);
-        } else {
-            response.sendRedirect(request.getContextPath() + "/Cart?error=checkout_failed");
+        // ── Lấy phương thức thanh toán từ form, mặc định COD ─────────────
+        if (paymentMethod == null || paymentMethod.trim().isEmpty()
+                || (!"COD".equals(paymentMethod) && !"MOMO".equals(paymentMethod))) {
+            paymentMethod = "COD";
         }
+
+        // ── Tạo đơn hàng trong DB ─────────────────────────────────────────
+        // CartService sẽ KHÔNG clear cart nếu là VNPAY (clear khi confirm)
+        String orderCode = cartService.checkout(cart, orderNote, customerIdStr, discountCode, deliveryAddress, paymentMethod, deliveryNote);
+
+        if (orderCode == null) {
+            response.sendRedirect(request.getContextPath() + "/Cart?error=checkout_failed");
+            return;
+        }
+
+        // ── Phân luồng theo phương thức thanh toán ────────────────────────
+        if ("MOMO".equals(paymentMethod)) {
+            // Lưu orderCode vào session để VnpayPaymentServlet và VnpayReturnServlet dùng
+            session.setAttribute("pendingOrderCode", orderCode);
+            // Redirect sang servlet khởi tạo cổng thanh toán VNPAY
+            response.sendRedirect(request.getContextPath() + "/momo/payment?orderCode=" + orderCode);
+        } else {
+            // COD: cart đã được clear bởi CartService, redirect trang thành công
+            response.sendRedirect(request.getContextPath() + "/Cart?checkoutSuccess=1&code=" + orderCode);
+        }
+    }
+
+    private void handleApplyDiscount(HttpServletRequest request, HttpServletResponse response)
+            throws IOException {
+        response.setContentType("application/json;charset=UTF-8");
+
+        String code = request.getParameter("discountCode");
+        if (code == null || code.trim().isEmpty()) {
+            response.getWriter().write("{\"success\":false,\"error\":\"Vui lòng nhập mã giảm giá.\"}");
+            return;
+        }
+
+        // Validate mã qua PromotionService
+        services.PromotionService ps = new services.PromotionService();
+        String checkJson = ps.checkDiscount(code.trim());
+
+        if (checkJson.contains("\"valid\": false") || checkJson.contains("\"valid\":false")) {
+            // Lấy msg từ JSON thủ công
+            String msg = "Mã không hợp lệ hoặc đã hết hạn.";
+            int msgIdx = checkJson.indexOf("\"msg\":");
+            if (msgIdx >= 0) {
+                int start = checkJson.indexOf('"', msgIdx + 6) + 1;
+                int end   = checkJson.indexOf('"', start);
+                if (start > 0 && end > start) msg = checkJson.substring(start, end);
+            }
+            response.getWriter().write("{\"success\":false,\"error\":\"" + msg + "\"}");
+            return;
+        }
+
+        // Tính tổng tiền từ cart hiện tại
+        HttpSession session = request.getSession(false);
+        @SuppressWarnings("unchecked")
+        Map<String, CartItem> cart = session != null
+                ? (Map<String, CartItem>) session.getAttribute("cart") : null;
+
+        java.math.BigDecimal total = java.math.BigDecimal.ZERO;
+        if (cart != null) {
+            for (CartItem item : cart.values()) {
+                total = total.add(new java.math.BigDecimal(item.getPrice())
+                        .multiply(new java.math.BigDecimal(item.getQuantity())));
+            }
+        }
+
+        java.math.BigDecimal discountAmt = ps.calculateDiscount(code.trim(), total);
+        java.math.BigDecimal finalAmt    = total.subtract(discountAmt).max(java.math.BigDecimal.ZERO);
+
+        response.getWriter().write(String.format(
+                "{\"success\":true,\"codeName\":\"%s\",\"discountAmount\":%s,\"finalAmount\":%s}",
+                code.trim().replace("\"", "\\\""),
+                discountAmt.toPlainString(),
+                finalAmt.toPlainString()
+        ));
     }
 }
